tests/error/error_in_expression_within_struct_initializer_resetting_should_exit_statement.c
// fail
float ident_0[0x2] = (float [2]){, __alignof !, };

